# ai-trading-bot

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/: config.py  scheduler.py
app/ai/: analyst.py
app/dashboard/: app.py
app/data/: fetcher.py
app/execution/: executor.py  position_manager.py
app/features/: pipeline.py
app/llm/: gateway.py  schemas.py
app/memory/: embeddings.py  episodic_store.py  memory_compactor.py  reflection.py  retrieval.py  schemas.py  summarizer.py
app/models/: ai.py  execution.py  market.py  risk.py  signals.py
app/persistence/: db.py  logger.py  summary.py
app/pipeline/: context.py  models.py  trading_pipeline.py
app/prompts/: market_analysis.txt  system_prompt.txt
app/risk/: engine.py
app/strategies/: spy_trend.py
app/util/: clock.py
app/validation/: validator.py
config/: settings.yaml
scripts/: replay_day.py  seed_db.py
tests/: conftest.py  test_api.py  test_models.py
tests/ai/: test_analyst.py  test_analyst_memory.py  test_analyst_prompt.py
tests/data/: test_fetcher.py
tests/execution/: test_executor.py  test_position_manager.py
tests/features/: test_pipeline.py
tests/golden/: _gen_fixtures.py  canonical.py  golden_runner.py  test_canonical.py  test_golden.py  test_runner.py  test_runner_cli.py
tests/llm/: test_claude_provider.py  test_gateway.py  test_schemas.py
tests/memory/: test_compactor.py  test_embeddings.py  test_episodic_store.py  test_reflection.py  test_retrieval.py  test_schemas.py  test_summarizer.py
tests/persistence/: test_db.py  test_logger.py  test_summary.py
(+20 files in other folders)
